# instant_meshes

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  README.md
scripts/: build  build-aarch64  build-eigen  build-instant-meshes  clean  common
src/: aabb.h  adjacency.cpp  adjacency.h  adjacencyRef.cpp  adjacencyRef.h  batch.cpp  batch.h  bvh.cpp  bvh.h  cleanup.cpp  cleanup.h  common.h  dedge.cpp  dedge.h  extract.cpp  extract.h  field.cpp  field.h  hierarchy.cpp  hierarchy.h  main.cpp  meshio.cpp  meshio.h  meshstats.cpp  meshstats.h  normal.cpp  normal.h  reorder.cpp  reorder.h  serializer.cpp  serializer.h  smoothcurve.cpp  smoothcurve.h  subdivide.cpp  subdivide.h  viewer.cpp  viewer.h
